# mod_vhost_ldapx

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  README.md
debian/: CMakeLists.txt  apache2  vhost_ldapx.load
doc/: LDAP.md  cn={0}mod_vhost_ldapx.ldif  mod_vhost_ldapx.schema
src/: cache.c  cache.h  config.c  config.h  hook_init.c  hook_init.h  hook_itk.c  hook_itk.h  hook_vhost.c  hook_vhost.h  ldap.c  ldap.h  log.h  mod_vhost_ldapx.c  mod_vhost_ldapx.h  settings.c  settings.h
