cmake_minimum_required(VERSION 3.0)
project(mod_vhost_ldapx)

set(PROJECT_VERSION "0.2.0")
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

set(CPACK_PACKAGE_NAME "libapache2-mod-vhost-ldapx")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Apache dynamic LDAP virtual hosting module")
set(CPACK_PACKAGE_DESCRIPTION "Enable dynamic Apache virtual hosting using LDAP backend")
set(CPACK_PACKAGE_CONTACT "The Ranger <ranger@risk.ee>")
set(CPACK_PROJECT_CONFIG_FILE "${CMAKE_SOURCE_DIR}/CPackConfig.cmake")

find_program(APXS_BIN NAMES apxs apxs2)
if(APXS_BIN)
	exec_program(${APXS_BIN} ARGS "-q CFLAGS" OUTPUT_VARIABLE APXS_C_FLAGS)
	exec_program(${APXS_BIN} ARGS "-q INCLUDEDIR" OUTPUT_VARIABLE APXS_APACHE_INCLUDEDIR)
	exec_program(${APXS_BIN} ARGS "-q APR_INCLUDEDIR" OUTPUT_VARIABLE APXS_APR_INCLUDEDIR)
	exec_program(${APXS_BIN} ARGS "-q LDFLAGS" OUTPUT_VARIABLE APXS_LDFLAGS)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${APXS_C_FLAGS} -I${APXS_APACHE_INCLUDEDIR} -I${APXS_APR_INCLUDEDIR}")
	set(CMAKE_SHARED_LINKER_FLAGS "-lldap -llber")
	add_library(${CMAKE_PROJECT_NAME} SHARED src/ldap.c src/cache.c src/hook_itk.c src/hook_vhost.c src/hook_init.c src/config.c src/settings.c src/mod_vhost_ldapx.c)
	set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES PREFIX "")
	install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION /usr/lib/apache2/modules)

	add_subdirectory(debian)
	include(CPack)
else(APXS_BIN)
	message(SEND_ERROR "Could not find APXS")
endif(APXS_BIN)

find_program(SLAPTEST_BIN NAMES slaptest)
if(SLAPTEST_BIN)
	file(COPY ${PROJECT_SOURCE_DIR}/doc/mod_vhost_ldapx.schema DESTINATION ${PROJECT_BINARY_DIR})
	exec_program(${SLAPTEST_BIN} ARGS "-f ${PROJECT_SOURCE_DIR}/build/.slapd.conf -F ${PROJECT_BINARY_DIR}")
	file(COPY ${PROJECT_BINARY_DIR}/cn=config/cn=schema/ DESTINATION ${PROJECT_SOURCE_DIR}/doc)
endif(SLAPTEST_BIN)
